[Issue #56] Update registration page to make program visible to students (#62)

--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -116,3 +116,11 @@
     -moz-transition: all 0.1s linear;
     transition: all 0.1s linear;
 }
+#userRole{
+    height: 45px;
+    border: 1px solid #ddd;
+    font-size: 16px;
+    -webkit-transition: all 0.1s linear;
+    -moz-transition: all 0.1s linear;
+    transition: all 0.1s linear;
+}
